Related: tdf#45820 polygon clipping during wmf load is ultra slow

For file fuzzing defer actually doing it during load and just set a clipping
region, which can take a polypolygon argument, instead of setting a basic
cliping rectangle + complexclip flag to specially clip certain things

for normal use, continue to do the slow thing as it gives different visual
output, so its either not quite the right thing, or there's bugs elsewhere
that would need to be fixed to go this way the whole time

Change-Id: Ieac7ab54ed7d7c1ca14afd75b25fe273fd676c5d